# project_python_203

./: CHANGELOG.md  CONTRIBUTING.md  My_workings_project_203.ipynb  README.md  pyproject.toml
backtests/: BlueFalconChef.csv  BrownJaguarDoctor.csv  GreenDolphinBlacksmith.csv  PinkSharkScientist.csv  TealTigerNurse.csv  TurquoiseGorillaPilot.csv  TurquoisePantherChef.csv  WhiteFalconLawyer.csv  YellowTigerEngineer.csv
docs/: Example_of_usage.ipynb  Makefile  conf.py  example.ipynb  make.bat
src/project_python_203/: Data_treatment.py  Trades.py
tests/: test_Data_Treatment.py  test_Trades.py  test_import.py  test_project_python_203.py
