[tool.poetry]
name = "project_python_203"
version = "0.0.0"
description = "Project Python master 203"
authors = ["Jean Deslis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
